--- a/src/graphical/security.manager.authbased.usrmgntdlg.lfm
+++ b/src/graphical/security.manager.authbased.usrmgntdlg.lfm
@@ -1,12 +1,11 @@
-object Form2: TForm2
+object AuthBasedUsrMgnt: TAuthBasedUsrMgnt
   Left = 1520
   Height = 554
   Top = 250
   Width = 779
-  Caption = 'Form2'
+  Caption = 'AuthBasedUsrMgnt'
   ClientHeight = 554
   ClientWidth = 779
-  LCLVersion = '1.9.0.0'
   object ButtonPanel1: TButtonPanel
     Left = 6
     Height = 42
