--- a/samples/LoginBase/frmmain.lfm
+++ b/samples/LoginBase/frmmain.lfm
@@ -124,6 +124,7 @@ object Form1: TForm1
     OnCanAccess = CustomizedUserManagement1CanAccess
     OnLogout = UserCustomizedUserManagement1Logout
     OnGetSchemaType = UserCustomizedUserManagement1GetSchemaType
+    OnGetUserSchema = UserCustomizedUserManagement1GetUserSchema
     Left = 151
     Top = 104
   end
