--- a/samples/LoginAuthBased/frmmainauth.lfm
+++ b/samples/LoginAuthBased/frmmainauth.lfm
@@ -9,7 +9,8 @@ object FormAuthBased: TFormAuthBased
   ClientWidth = 873
   OnCreate = FormCreate
   OnDestroy = FormDestroy
-  LCLVersion = '1.9.0.0'
+  LCLVersion = '1.6.4.0'
+  Visible = False
   object SecureButton1: TSecureButton
     AnchorSideLeft.Control = BuLogout
     AnchorSideLeft.Side = asrBottom
@@ -109,12 +110,12 @@ object FormAuthBased: TFormAuthBased
     OnLogout = UserCustomizedUserManagement1Logout
     OnGetSchemaType = UserCustomizedUserManagement1GetSchemaType
     OnGetUserSchema = UserCustomizedUserManagement1GetUserSchema
-    Left = 151
-    Top = 104
+    left = 151
+    top = 104
   end
   object ActionList1: TActionList
-    Left = 151
-    Top = 256
+    left = 151
+    top = 256
     object LoginAction1: TLoginAction
       Category = 'PascalSecure Actions'
       Caption = 'Graphical login'
@@ -125,7 +126,7 @@ object FormAuthBased: TFormAuthBased
     end
   end
   object GraphicalUsrMgntInterface1: TGraphicalUsrMgntInterface
-    Left = 151
-    Top = 168
+    left = 151
+    top = 168
   end
 end
